# web-games

./: .gitignore  cabal.project
ankh/: ankh.cabal
ankh/app/: Main.hs
ankh/src/: AppTypes.hs  Basics.hs  Board.hs  Game.hs  Hex.hs  LocMap.hs  Player.hs
ankh/ui/: board.js  hex.js  index.html  items.js  main.js  style.css
anno/: anno.cabal
anno/src/: AppTypes.hs  Basics.hs
anno/ui/: main.js  style.css
brass/: CHANGELOG.md  brass.cabal
brass/src/: Basics.hs  Building.hs  Income.hs
common-interact/: common-interact.cabal
common-interact/src/: AppTypes.hsig
common-interact/src/Common/: Interact.hs  InteractImpl.hs  Main.hs  Server.hs
common-js/: connect.js  html.js
common-utils/: common-utils.cabal
common-utils/src/Common/: Bag.hs  Basics.hs  CallJS.hs  ColorPicker.hs  Enum.hs  Field.hs  Options.hs  RNG.hs  RNGM.hs  Utils.hs
controller/: CHANGELOG.md  controller.cabal
controller/src/: Main.hs
controller/ui/: hyp.html  index.html  widgets.js
ht-hs/: ht-hs.cabal
ht-hs/app/: Actions.hs  Main.hs
ht-hs/app/Actions/: Bonus.hs  Common.hs  Complete.hs  FixedBonus.hs  Hire.hs  Place.hs
ht-hs/src/: AppTypes.hs  Board.hs  Edge.hs  Game.hs  Geometry.hs  Node.hs
ht-hs/ui/: board.js  common-js  index.html  log.js  main.js  playerBoard.js  score.js  sock.js  style.css  turn.js
hyp/: CHANGELOG.md  hyp.cabal
hyp/app/: BasicAction.hs  Common.hs  Main.hs  Play.hs
hyp/src/: Action.hs  AppTypes.hs  Bag.hs  BoardActions.hs  FinalScore.hs  Geometry.hs  Layout.hs  Log.hs  PlayerState.hs  Properties.hs  Resource.hs  RuinToken.hs  Tech.hs  Terrain.hs  Tile.hs  Turn.hs
hyp/ui/: Makefile  action.js  basicAction.js  board.js  html.js  index.html  log.js  main.js  market.js  player.js  questions.js  sock.js  style.css  style.css.map  style.scss  tech.js  test.html  turn.js
hyp/ui/img/: .README.md.swp  README.md
import-svg/: CHANGELOG.md  Main.hs  import-svg.cabal
scripts/: install  install-component  upload
spectromancer/: spectromancer.cabal
spectromancer/src/: GameMonad.hs
spectromancer/ui/: players.js
template/: template.cabal
template/app/: Main.hs
template/src/: AppTypes.hs
template/ui/: common-js  index.html  main.js  style.css
terra/: terra.cabal
terra/app/: Main.hs
terra/ui/: index.html  main.js  style.css  token.js
terra/ui/img/: Makefile
the-south/: the-south.cabal
the-south/app/: Main.hs
the-south/src/: AppTypes.hs  Game.hs
the-south/ui/: game.js  index.html  main.js  style.css
