cabal-version:       >=1.10

name:                hyp
version:             0.1.0.0
-- synopsis:
-- description:
-- bug-reports:
-- license:
license-file:        LICENSE
author:              Iavor Diatchki
maintainer:          iavor.diatchki@gmail.com
-- copyright:
-- category:
build-type:          Simple
extra-source-files:  CHANGELOG.md

library
  hs-source-dirs: src
  exposed-modules:
    Action,
    Resource,
    RuinToken,
    Terrain,
    Tile,
    Tech,
    BoardActions

  build-depends:
    base, containers, text,
    common-utils

  ghc-options: -Wall

  default-language:    Haskell2010
  default-extensions: DeriveGeneric, OverloadedStrings, TemplateHaskell
