cabal-version:       >=1.10

name:                hyp
version:             0.1.0.0
-- synopsis:
-- description:
-- bug-reports:
-- license:
license-file:        LICENSE
author:              Iavor Diatchki
maintainer:          iavor.diatchki@gmail.com
-- copyright:
-- category:
build-type:          Simple
extra-source-files:  CHANGELOG.md

library
  hs-source-dirs: src
  exposed-modules:
    Action,
    Resource,
    RuinToken,
    Terrain,
    Tile,
    Tech,
    BoardActions,
    Bag,
    PlayerState,
    Geometry,
    Layout,
    Turn,
    AppTypes

  build-depends:
    base, containers, text,
    aeson,
    common-utils

  ghc-options: -Wall

  default-language:    Haskell2010
  default-extensions: DeriveGeneric, OverloadedStrings, TemplateHaskell,
                      BlockArguments, DeriveAnyClass

executable hyp
  hs-source-dirs: app
  main-is: Main.hs
  other-modules:
    Play,
    BasicAction
  build-depends:
    base,
    containers,
    bytestring,
    text,
    tf-random,
    common-utils,
    common-interact,
    aeson,
    hyp

  ghc-options: -Wall
  default-language: Haskell2010
  default-extensions:
    BlockArguments, OverloadedStrings, TemplateHaskell

