cabal-version:       3.0

name:                TEMPLATE
version:             0.1.0.0
license-file:        LICENSE
author:              Iavor Diatchki
maintainer:          iavor.diatchki@gmail.com
build-type:          Simple
extra-source-files:  CHANGELOG.md

common Common
  ghc-options: -Wall
  default-language:    Haskell2010
  default-extensions:
    DeriveGeneric, DeriveAnyClass,
    OverloadedStrings,
    TemplateHaskell,
    BlockArguments, ImportQualifiedPost,
    NamedFieldPuns, RecordWildCards

  build-depends:
    base,
    containers,
    bytestring,
    text
 

library
  import: Common
  hs-source-dirs: src
  exposed-modules:
    AppTypes

  build-depends:
    aeson,
    common-utils


executable TEMPLATE
  import: Common
  hs-source-dirs: app
  main-is: Main.hs
  build-depends:
    common-utils,
    common-interact,
    TEMPLATE


